src/objects/Competitors__c.object
<CustomObject>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <description>This field holds the competitor name which are created from Opportunity</description>
        <label>Competitor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Product__c</fullName>
        <label>Competitor Product</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Price__c</fullName>
        <label>End User Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>Master-Detail Relationship with the Opportunity</description>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reseller_Price__c</fullName>
        <label>Reseller Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Test_Field_Will_be_deleted__c</fullName>
        <label>Test Field (Will be deleted</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Competitors</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Competitors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Restrict_Competito_Name_Update_for_Sales</fullName>
        <active>true</active>
        <description>This validation rule is written to restrict the updation of Competitor Name by Sales Users.</description>
        <errorConditionFormula>AND( ISCHANGED(Name),($Profile.Name &lt;&gt; &apos;System Administrator&apos;) )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Competitor Name cannot be modified</errorMessage>
    </validationRules>
</CustomObject>